<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/area"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_area"
            android:layout_width="347dp"
            android:layout_height="123dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_area"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/area"
                app:srcCompat="@drawable/area" />

            <TextView
                android:id="@+id/textView_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="150dp"
                android:hapticFeedbackEnabled="false"
                android:text="@string/area"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_speed"
            android:layout_width="347dp"
            android:layout_height="123dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_area">

            <ImageView
                android:id="@+id/imageView_speed"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/speed"
                app:srcCompat="@drawable/speed" />

            <TextView
                android:id="@+id/textView_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="150dp"
                android:contentDescription="@string/speed"
                android:text="@string/speed"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_length"
            android:layout_width="347dp"
            android:layout_height="123dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_speed">

            <ImageView
                android:id="@+id/imageView_length"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/length"
                app:srcCompat="@drawable/length"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="150dp"
                android:text="@string/length"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_mileage"
            android:layout_width="347dp"
            android:layout_height="123dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="35dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_length">

            <ImageView
                android:id="@+id/imageView_mileage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/mileage"
                app:srcCompat="@drawable/mileage" />

            <TextView
                android:id="@+id/textView_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="150dp"
                android:text="@string/mileage"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>